--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,11 @@
 
 
 %back1 {
-  background: url('/img/noise1.png'), linear-gradient(to bottom, #d2d2d2 35%,#ACB7B6 55%,#a8a8a8 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: url('/img/noise1.png'), #d2d2d2; 
+              // linear-gradient(to bottom, 
+              // #d2d2d2 35%,
+              // #ACB7B6 55%,
+              // #a8a8a8 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 body {
@@ -24,7 +28,7 @@ body {
   font-weight: 400;
   color: rgb(9, 9, 17);
   overflow-x: hidden;
-  background-color: $thirdColor;
+  background-color: $backgroundGray;
 }
 
 a {
