--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -1,33 +1,40 @@
 $width: 33.3%;
 
+.to-show {
+  display: none;
+}
+.show-keywords {
+  display: flex !important;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+
 #main-content {
   margin-top: 100px;
-  width: 100%;
+  width: 90%;
   text-align: center;
   display: inline-block;
-  // margin-left: 52px;
   height: auto;
   min-height: 700px;
-
+  margin: 0 5% 0 5%;
+  
   .main-over-wrapper {
     display: inline-block;
     position: relative;
     min-width: 250px;
     width: 100%;
-
+    
     .main-content-wrapper {
       .grid-item-widthx2 {
         width: 66.6%;
       }
-  
+      
       .grid-item{
-        box-shadow: 0 -20px 0px rgba($mainColor4, 0.02), 
-                    0 -15px 0 rgba($mainColor4, 0.04), 
-                    0 -10px 0 rgba($mainColor4, 0.03), 
-                    0 -5px 0 rgba($mainColor4, 0.03), 
-                    0 -2px 0 rgba($mainColor4, 0.03);
+        box-shadow: 0 6px 0 0 rgba($mainColor4, 0.25);
         width: $width;
         overflow: hidden;
+        margin-bottom: 17px;
+        border-radius: 2px;
         // transition: all 0.5s;
 
         &:hover {
@@ -37,26 +44,32 @@ $width: 33.3%;
         .article-content {
           position: relative;
           margin-bottom: -4px;
-     
+          overflow: hidden;
+
+          &:hover {
+            .over-article-container {
+              transform: rotate(0);
+            }
+          }
+  
           .over-article-container {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: rgba($backgroundOverArticles,1);
-            background: url('/img/noise.png'), 
-                        linear-gradient(to bottom, 
-                        rgba($backgroundOverArticles,1) 0%,
-                        rgba($backgroundOverArticles,1) 50%, 
-                        rgba($backgroundOverArticles,0.96) 70%, 
-                        rgba($backgroundOverArticles,0.90) 80%, 
-                        rgba($backgroundOverArticles,0.80) 100%);
-            opacity: 0;
-            transition: 0.05s all ease-out;
-            
-            &:hover {
-              opacity: .98 !important;
-            }
+            background: $backgroundOverArticles;
+            transition: 0.3s transform cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transform: rotateX(90deg);
+            transform-origin: 0 0;
 
+            .over-article-loader {
+              width: 100%;
+              height: 100%;
+              background-color: $mainColor;
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+            
             .over-article-wrapper {
               position: relative;
               height: 50%;
@@ -71,31 +84,30 @@ $width: 33.3%;
 
                 .over-article-title {
                   display: inline-block;
-                  margin: 15px 15px 0px 15px;
+                  margin: 20px 45px 0px 20px;
                   padding-bottom: -2px;
                   font-family: 'eleb';
                   text-transform: uppercase;
-                  font-size: 2.5em;
+                  font-size: 3.1em;
                   line-height: 1.1em;
                   -webkit-font-smoothing: antialiased !important;
                   width: 70%;
                   color: $textColor;
-                  transform: rotate(0.5deg);
-
                   -webkit-hyphens: auto;
                   -moz-hyphens: auto;
                   -ms-hyphens: auto;
                   hyphens: auto;
                   -webkit-hyphenate-character: '⌁';
-
+                  
                 }
                 
                 .over-article-type {
-                  color: $secondaryColor3;
-                  font-size: 0.95rem;
+                  color: $backgroundOverArticles;
+                  font-size: 1rem;
                   font-family: 'ratDemiB';
-                  margin: 20px 15px 8px 17px;
-                  
+                  margin: 30px 20px 10px 22px;
+                  -webkit-font-smoothing: antialiased !important;
+
                   span {
                     
                     // box-shadow: 0px -1px 1px rgba(white, 0.7);
@@ -105,20 +117,20 @@ $width: 33.3%;
                     -moz-hyphens: none;
                     -ms-hyphens: none;
                     hyphens: none;
-                    letter-spacing: 0.03em;
-                    background-color: $bottomTextColor;
-                    padding: 4px 9px 3px 9px;
+                    letter-spacing: 0.05em;
+                    background-color: $typeColor;
+                    padding: 5px 6px 2px 5px;
                     position: relative;
                     
                     &:before {
                       content: "type:";
                       font-family: 'ratDemiB';
                       text-transform: none;
-                      font-size: 0.6em;
-                      top: -11px;
-                      left: 5px;
+                      font-size: 0.7rem;
+                      top: -16px;
+                      left: 2px;
                       position: absolute;
-                      color: $bottomTextColor;
+                      color: $typeColor;
                     }
 
                   }
@@ -127,31 +139,32 @@ $width: 33.3%;
               .over-article-bottom {
                 width: 100%;
                 height: 240px;
-                margin-top: 5px;
-                margin: 8px 15px 0px 15px;
+                text-align: left;
                 
                 .over-article-keywords {
-                  text-align: left;
-                  margin-left: -1px;
+                  width: 100%;
+                  height: 100%;
+                  display: none;
+                  margin-left: 20px;
+                  margin-top: 10px;
                   
                   .over-article-keyword {
+                    margin-top: 10px;
+                    margin-right: 2px;
                     -webkit-font-smoothing: antialiased !important;
                     font-family: 'ratDemiB';
                     text-transform: capitalize;
                     font-size: 1em;    
-                    margin-right: -10px;
                     text-decoration: underline;
-                    color: rgba($bottomTextColor, 1);
+                    color: $bottomTextColor;
                     text-decoration-color: transparent;
-                    padding: 4px 3px 0px 2px;
+                    padding: 4px 2px 1px 2px;
                     
                     .over-article-word {
-                      line-height: 1.5em;
                       text-transform: uppercase;
                       transition: .1s all ease-out;
-                      border: 2px solid transparent;
-                      border-bottom: 2px solid $bottomTextColor;
-                      padding: 4px 2px 0px 2px;
+                      border: 2px solid $bottomTextColor;
+                      padding: 5px 5px 1px 4px;
                     }
 
                     &:hover {
@@ -161,6 +174,8 @@ $width: 33.3%;
                       }
                     }
                   }
+
+               
                 }
               }
             }
@@ -195,7 +210,6 @@ $width: 33.3%;
             &::after {
               color: $thirdColor;
             }
-
           }
         }
       }
@@ -209,26 +223,32 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: 25% !important}
-  .grid-item {width: 25% !important}
-  .grid-item-widthx2 {width: 50% !important}
+  .grid-sizer {width: calc( 25% - 12px) !important}
+  .grid-item {width: calc( 25% - 12px) !important}
+  .grid-item-widthx2 {width: calc( 50% - 12px) !important}
 }
 
 @media all and (max-width: 1400px) {
-  .grid-sizer {width: 33.3% !important}
-  .grid-item {width: 33.3% !important}
-  .grid-item-widthx2 {width: 66.6% !important}
+  .grid-sizer {width: calc(33.3% - 12px) !important}
+  .grid-item {width: calc(33.3% - 12px) !important}
+  .grid-item-widthx2 {width: calc(66.6% - 12px) !important}
 }
 
 @media all and (max-width: 1090px) {
-  .grid-sizer {width: 50% !important}
-  .grid-item {width: 50% !important}
+  .grid-sizer {width: calc(50% - 12px ) !important}
+  .grid-item {width: calc(50% - 12px ) !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
 @media all and (max-width: 582px) {
+  #main-content {
+    margin-left: calc(5% + 20px);
+    margin-right: 0% !important;
+  }
   .grid-sizer {width: 100% !important}
-  .grid-item {width: 100% !important}
+  .grid-item {
+    width: 100% !important;
+  }
   .grid-item-widthx2 {width: 100% !important}
 }
 
