--- a/public/css/main.css
+++ b/public/css/main.css
@@ -425,13 +425,12 @@ svg:focus {
   align-content: flex-start; }
 
 #main-content {
-  margin-top: 100px;
-  width: 90%;
+  width: 98%;
   text-align: center;
   display: inline-block;
   height: auto;
   min-height: 700px;
-  margin: 0 5% 0 5%; }
+  margin: 100px 1% 0 1%; }
   #main-content .main-over-wrapper {
     display: inline-block;
     position: relative;
@@ -440,10 +439,10 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item-widthx2 {
       width: 66.6%; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item {
-      box-shadow: 0 6px 0 0 rgba(84, 56, 145, 0.25);
+      box-shadow: 0 3px 0 0 rgba(19, 22, 24, 0.25);
       width: 33.3%;
       overflow: hidden;
-      margin-bottom: 17px;
+      margin-bottom: 12px;
       border-radius: 2px; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
         cursor: pointer; }
@@ -573,25 +572,25 @@ svg:focus {
 
 @media all and (max-width: 3000px) {
   .grid-sizer {
-    width: calc( 25% - 12px) !important; }
+    width: calc( 25% - 8px) !important; }
   .grid-item {
-    width: calc( 25% - 12px) !important; }
+    width: calc( 25% - 8px) !important; }
   .grid-item-widthx2 {
-    width: calc( 50% - 12px) !important; } }
+    width: calc( 50% - 8px) !important; } }
 
 @media all and (max-width: 1400px) {
   .grid-sizer {
-    width: calc(33.3% - 12px) !important; }
+    width: calc(33.3% - 6px) !important; }
   .grid-item {
-    width: calc(33.3% - 12px) !important; }
+    width: calc(33.3% - 6px) !important; }
   .grid-item-widthx2 {
-    width: calc(66.6% - 12px) !important; } }
+    width: calc(66.6% - 6px) !important; } }
 
 @media all and (max-width: 1090px) {
   .grid-sizer {
-    width: calc(50% - 12px) !important; }
+    width: calc(50% - 6px) !important; }
   .grid-item {
-    width: calc(50% - 12px) !important; }
+    width: calc(50% - 6px) !important; }
   .grid-item-widthx2 {
     width: 100% !important; } }
 
