--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -10,13 +10,13 @@ $width: 33.3%;
 }
 
 #main-content {
-  margin-top: 100px;
-  width: 90%;
+  width: 98%;
   text-align: center;
   display: inline-block;
   height: auto;
   min-height: 700px;
-  margin: 0 5% 0 5%;
+  margin: 100px 1% 0 1%;
+
   
   .main-over-wrapper {
     display: inline-block;
@@ -30,10 +30,10 @@ $width: 33.3%;
       }
       
       .grid-item{
-        box-shadow: 0 6px 0 0 rgba($mainColor4, 0.25);
+        box-shadow: 0 3px 0 0 rgba($mainColor, 0.25);
         width: $width;
         overflow: hidden;
-        margin-bottom: 17px;
+        margin-bottom: 12px;
         border-radius: 2px;
         // transition: all 0.5s;
 
@@ -223,20 +223,20 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: calc( 25% - 12px) !important}
-  .grid-item {width: calc( 25% - 12px) !important}
-  .grid-item-widthx2 {width: calc( 50% - 12px) !important}
+  .grid-sizer {width: calc( 25% - 8px) !important}
+  .grid-item {width: calc( 25% - 8px) !important}
+  .grid-item-widthx2 {width: calc( 50% - 8px) !important}
 }
 
 @media all and (max-width: 1400px) {
-  .grid-sizer {width: calc(33.3% - 12px) !important}
-  .grid-item {width: calc(33.3% - 12px) !important}
-  .grid-item-widthx2 {width: calc(66.6% - 12px) !important}
+  .grid-sizer {width: calc(33.3% - 6px) !important}
+  .grid-item {width: calc(33.3% - 6px) !important}
+  .grid-item-widthx2 {width: calc(66.6% - 6px) !important}
 }
 
 @media all and (max-width: 1090px) {
-  .grid-sizer {width: calc(50% - 12px ) !important}
-  .grid-item {width: calc(50% - 12px ) !important}
+  .grid-sizer {width: calc(50% - 6px ) !important}
+  .grid-item {width: calc(50% - 6px ) !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
