--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -37,6 +37,7 @@
     // background-color: $thirdColor3;
 
     #bar-trigger {
+      transform: rotateZ(2deg);
       color: $trigger-color;
       font-family: 'ratDemiB';
       width: 30px;
@@ -95,7 +96,6 @@
       width: 360px;
       display: inline-block;
       background: $background-bar-color;
-      box-shadow:  5px 0px 0px rgba($mainColor, 0.3);
       height: 100%;
       padding-top: 0px;
 
@@ -134,6 +134,7 @@
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
+            text-shadow: 0px 0px 10px rgba($items-colors-over, .5);
           }
         }
       }
@@ -162,15 +163,11 @@
           border-bottom: 2px solid $items-colors;
           padding: 3px 2px 0px 2px; 
 
-          background: url('/img/noise2.png') rgba($items-colors, 1);
-          -webkit-background-clip: text;
-          background-clip: text;
-          color: transparent;
-
           &:hover {
             cursor: pointer;
             border: 2px solid $items-colors-over;
             color: $items-colors-over;
+            box-shadow: 0px 0px 4px 1px rgba($items-colors-over, .4);
           }
         }
       }
